CHANGES
-------
Version 0.10 : In Progress
--------------------------
04/14/2019 Simplified the implementation and semantics of cancellation control.
           The enable_cancellation() function has been removed.  It is now
           only possible to disable cancellation.  Nesting is still allowed.
           Pending cancellation exceptions are raised on the first blocking
           call executed when reenabled.  The check_cancellation() function 
           can be used to explicitly check for cancellation as before.
           
03/09/2019 Fixed a bug in network.open_connection() that was passing arguments
           incorrectly.  Issue #291.

11/18/2018 Removed code that attempted to detect unsafe async generator
           functions.  Such code is now executed without checks or 
           warnings.  It's still possible that code in finally blocks
           might not execute unless you use curio.meta.finalize() or
           a function such as async_generator.aclosing() (third party).
           The @safe_generator decorator is now also unnecessary.

11/11/2018 Removed the wait argument to TaskGroup.join().  The waiting policy
           for task groups is specified in the TaskGroup constructor.  For
           example:

               with TaskGroup(wait=any) as group:
                    ...

09/05/2018 Tasks submitted to Kernel.run() no longer log exceptions should they
           crash.  Such tasks already return immediately to the caller with the
           exception raised. 

09/05/2018 Refinement to Kernel.__exit__() to make sure the kernel shuts down
           regardless of any exceptions that have occurred.  See Issue #275.

04/29/2018 New task-related function.  get_all_tasks() returns a list of all active
           Tasks. For example:

               tasks = await get_all_tasks()

           Tasks also have a where() method that returns a (filename, lineno) tuple
           indicating where they are executing.
